--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,20 +3,20 @@
   "short_name": "nLine Blog",
   "icons": [
     {
-      "src": "/android-chrome-96x96.png",
-      "type": "image/png",
-      "sizes": "96x96"
-    },
-    {
       "src": "/favicon-16x16.png",
       "type": "image/png",
       "sizes": "16x16"
     },
     {
-      "src": "/favicon-32x32.png",
+      "src": "/favicon.png",
       "type": "image/png",
       "sizes": "32x32"
-    }
+    },
+    {
+      "src": "/android-chrome-96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
