--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nextjs-notion-starter-kit",
-  "version": "2.0.0",
+  "name": "nline-blog",
+  "version": "1.0.0",
   "private": true,
-  "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
+  "description": "nLine's Notion powered blog",
   "author": "nLine <info@nline.io>, Travis Fischer <travis@transitivebullsh.it>",
-  "repository": "transitive-bullshit/nextjs-notion-starter-kit",
+  "repository": "nline/nline-blog",
   "license": "MIT",
   "engines": {
     "node": ">=16"
@@ -47,7 +47,7 @@
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
-    "react-notion-x": "^6.15.7",
+    "react-notion-x": "^6.16.0",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.3.2",
     "rss": "^1.2.2"
