--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "@vercel/og": "^0.0.19",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "eslint-config-next": "^13.4.7",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.4.1",
     "got": "^12.0.3",
     "isomorphic-unfetch": "^3.1.0",
-    "lqip-modern": "^2.0.0",
-    "next": "12",
+    "lqip-modern": "^1.2.0",
+    "next": "^13.4.7",
     "notion-client": "^6.15.6",
     "notion-types": "^6.15.6",
     "notion-utils": "^6.15.6",
