--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "start": "next start",
     "deploy": "vercel deploy",
     "deps": "run-s deps:*",
-    "deps:update": "[ -z $GITHUB_ACTIONS ] && yarn add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
-    "deps:link": "[ -z $GITHUB_ACTIONS ] && yarn link notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:link on CI'",
+    "deps:update": "[ -z $GITHUB_ACTIONS ] && pnpm add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
+    "deps:link": "[ -z $GITHUB_ACTIONS ] && pnpm link notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:link on CI'",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
     "test": "run-p test:*",
     "test:lint": "eslint '**/*.{ts,tsx}'",
-    "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check"
+    "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@fisch0920/use-dark-mode": "^2.4.0",
@@ -31,6 +32,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@vercel/analytics": "^1.1.3",
     "@vercel/og": "^0.6.2",
+    "canvas": "^2.11.2",
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
     "eslint-config-next": "^14.1.0",
@@ -46,6 +48,7 @@
     "p-map": "^7.0.1",
     "p-memoize": "^7.1.1",
     "posthog-js": "^1.105.4",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
