--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-notion-x": "^6.16.0",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.0",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
