--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "got": "^14.2.0",
     "isomorphic-unfetch": "^4.0.2",
     "lqip-modern": "^2.0.0",
-    "next": "14.1.1-canary.46",
+    "next": "^14.1.0",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
     "notion-utils": "^6.16.0",
