--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "typescript": "^5.3.3"
   },
   "overrides": {
-    "lqip-modern@2.0.0>sharp": "0.32.6",
+    "sharp": "0.32.6",
     "cacheable-request": {
       "keyv": "npm:@keyvhq/core@~1.6.6"
     }
