--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@fisch0920/use-dark-mode": "^2.4.0",
     "@keyvhq/core": "^2.1.0",
     "@keyvhq/redis": "^2.1.0",
-    "@react-icons/all-files": "^4.1.0",
     "@vercel/analytics": "^1.1.3",
     "@vercel/og": "^0.6.2",
     "canvas": "^2.11.2",
@@ -53,6 +52,7 @@
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-notion-x": "^6.16.0",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.0",
