--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "notion-utils": "^6.16.0",
     "p-map": "^7.0.1",
     "p-memoize": "^7.1.1",
-    "posthog-js": "^1.105.6",
+    "posthog-js": "^1.105.8",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
@@ -57,7 +57,7 @@
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.0",
     "rss": "^1.2.2",
-    "sharp": "0.32.6"
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
@@ -75,12 +75,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
-  },
-  "overrides": {
-    "sharp": "0.32.6",
-    "cacheable-request": {
-      "keyv": "npm:@keyvhq/core@~1.6.6"
-    }
   },
   "packageManager": "pnpm@8.12.0"
 }
