--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "deploy": "vercel deploy",
@@ -28,52 +28,57 @@
   },
   "dependencies": {
     "@fisch0920/use-dark-mode": "^2.4.0",
-    "@keyvhq/core": "^2.1.0",
-    "@keyvhq/redis": "^2.1.0",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/og": "^0.6.2",
+    "@keyvhq/core": "^2.1.1",
+    "@keyvhq/redis": "^2.1.5",
+    "@vercel/analytics": "^1.3.2",
+    "@vercel/og": "^0.6.3",
     "canvas": "^2.11.2",
     "classnames": "^2.5.1",
-    "date-fns": "^3.3.1",
-    "eslint-config-next": "^14.1.0",
+    "date-fns": "^4.1.0",
+    "eslint-config-next": "15.0.2",
     "expiry-map": "^2.0.0",
-    "fathom-client": "^3.6.0",
-    "got": "^14.2.0",
+    "fathom-client": "^3.7.2",
+    "got": "^14.4.4",
     "isomorphic-unfetch": "^4.0.2",
-    "lqip-modern": "^2.0.0",
-    "next": "^14.1.0",
-    "notion-client": "^6.16.0",
-    "notion-types": "^6.16.0",
-    "notion-utils": "^6.16.0",
-    "p-map": "^7.0.1",
+    "lqip-modern": "^2.1.0",
+    "next": "15.0.2",
+    "notion-client": "^7.0.1",
+    "notion-types": "^7.0.1",
+    "notion-utils": "^7.0.1",
+    "p-map": "^7.0.2",
     "p-memoize": "^7.1.1",
-    "posthog-js": "^1.108.0",
+    "posthog-js": "^1.181.0",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-notion-x": "^6.16.0",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0",
+    "react-notion-x": "^7.0.1",
     "react-tweet-embed": "^2.0.0",
-    "react-use": "^17.5.0",
+    "react-use": "^17.5.1",
     "rss": "^1.2.2",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.0",
+    "@next/bundle-analyzer": "15.0.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/got": "^9.6.12",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@types/node": "^22.9.0",
+    "@types/react": "npm:types-react@19.0.0-alpha.3",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-alpha.3"
+    }
   }
 }
