--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "deploy": "vercel deploy",
@@ -45,6 +45,7 @@
     "fathom-client": "^3.7.2",
     "got": "^14.4.4",
     "isomorphic-unfetch": "^4.0.2",
+    "ky": "^1.7.2",
     "lqip-modern": "^2.1.0",
     "next": "15.0.2",
     "notion-client": "^7.0.1",
@@ -54,9 +55,9 @@
     "p-memoize": "^7.1.1",
     "posthog-js": "^1.181.0",
     "prismjs": "^1.29.0",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-notion-x": "^7.0.1",
     "react-tweet-embed": "^2.0.0",
@@ -69,7 +70,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/got": "^9.6.12",
     "@types/node": "^22.9.0",
-    "@types/react": "npm:types-react@19.0.0-alpha.3",
+    "@types/react": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
     "cross-env": "^7.0.3",
@@ -83,7 +84,9 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-alpha.3"
+      "@types/react": "^18.2.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
     }
   }
 }
