--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.14.0",
     "@next/bundle-analyzer": "15.0.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/got": "^9.6.12",
