--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,28 +17,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3
-        id: pnpm-install
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          version: 9.12.2
-          run_install: false
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
+          bun-version: latest
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile --strict-peer-dependencies
+        run: bun install --frozen-lockfile
 
       - name: Run test
-        run: pnpm test
+        run: bun test
 
       # TODO Enable those lines below if you use a Redis cache, you'll also need to configure GitHub Repository Secrets
       # env:
       #   REDIS_HOST: ${{ secrets.REDIS_HOST }}
       #   REDIS_PASSWORD: ${{ secrets.REDIS_PASSWORD }}
       # - name: Build
-      #   run: pnpm build
+      #   run: bun run build
