--- a/package.json
+++ b/package.json
@@ -15,51 +15,50 @@
     "build": "next build",
     "start": "next start",
     "deploy": "vercel deploy",
-    "deps:update": "[ -z $GITHUB_ACTIONS ] && pnpm up -L notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
+    "deps:update": "[ -z $GITHUB_ACTIONS ] && bun update notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
     "deps:link": "[ -z $GITHUB_ACTIONS ] && run-s deps:link:* || echo 'Skipping deps:update on CI'",
-    "deps:unlink": "[ -z $GITHUB_ACTIONS ] && pnpm add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
-    "deps:link:notion-types": "pnpm link ../react-notion-x/packages/notion-types",
-    "deps:link:notion-utils": "pnpm link ../react-notion-x/packages/notion-utils",
-    "deps:link:notion-client": "pnpm link ../react-notion-x/packages/notion-client",
-    "deps:link:react-notion-x": "pnpm link ../react-notion-x/packages/react-notion-x",
+    "deps:unlink": "[ -z $GITHUB_ACTIONS ] && bun add notion-client notion-types notion-utils react-notion-x || echo 'Skipping deps:update on CI'",
+    "deps:link:notion-types": "bun link ../react-notion-x/packages/notion-types",
+    "deps:link:notion-utils": "bun link ../react-notion-x/packages/notion-utils",
+    "deps:link:notion-client": "bun link ../react-notion-x/packages/notion-client",
+    "deps:link:react-notion-x": "bun link ../react-notion-x/packages/react-notion-x",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
     "test": "run-p test:*",
     "test:lint": "eslint .",
     "test:prettier": "prettier '**/*.{js,jsx,ts,tsx}' --check",
-    "preinstall": "npx only-allow pnpm",
-    "postinstall": "pnpm rebuild sharp"
+    "preinstall": "npx only-allow bun"
   },
   "dependencies": {
     "@fisch0920/use-dark-mode": "^2.4.0",
     "@keyvhq/core": "^2.1.1",
     "@keyvhq/redis": "^2.1.5",
-    "@vercel/analytics": "^1.4.0",
-    "@vercel/og": "^0.6.3",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/og": "^0.6.4",
     "canvas": "^2.11.2",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "eslint-config-next": "15.0.3",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.7.2",
-    "got": "^14.4.4",
+    "got": "^14.4.5",
     "isomorphic-unfetch": "^4.0.2",
     "ky": "^1.7.2",
     "lqip-modern": "^2.2.1",
     "next": "15.0.3",
-    "notion-client": "^7.1.3",
-    "notion-types": "^7.1.3",
-    "notion-utils": "^7.1.3",
+    "notion-client": "^7.1.5",
+    "notion-types": "^7.1.5",
+    "notion-utils": "^7.1.5",
     "p-map": "^7.0.2",
     "p-memoize": "^7.1.1",
-    "posthog-js": "^1.186.1",
+    "posthog-js": "^1.188.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-notion-x": "^7.2.3",
+    "react-notion-x": "^7.2.5",
     "react-tweet-embed": "^2.0.0",
     "react-use": "^17.5.1",
     "rss": "^1.2.2",
@@ -71,10 +70,10 @@
     "@next/bundle-analyzer": "15.0.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/got": "^9.6.12",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.9.3",
     "@types/react": "^18.3.12",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
@@ -82,13 +81,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.3"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "^18.2.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
-    }
+    "typescript": "^5.7.2"
   }
 }
