--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,16 @@ jobs:
       fail-fast: true
       matrix:
         node-version:
-          - 18
           - 22
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
 
       - name: Install Bun
         uses: oven-sh/setup-bun@v2
